--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/boris-pavel/ss-demo#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   }
